[fix] contact details

--- a/index.html
+++ b/index.html
@@ -1291,28 +1291,28 @@
                     <div class="contact-icon">📧</div>
                     <div>
                         <h4>Email</h4>
-                        <p>akshay@gmail.com</p>
+                        <p>akshay513p[a]gmail.com</p>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">📱</div>
                     <div>
                         <h4>Phone</h4>
-                        <p>+91 6235210</p>
+                        <p>+91 6235210270</p>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">🌐</div>
                     <div>
                         <h4>LinkedIn</h4>
-                        <p>linkedin.com/in/akshayp</p>
+                        <p>linkedin.com/in/akshay-p-4b9a6b269</p>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">💻</div>
                     <div>
                         <h4>GitHub</h4>
-                        <p>github.com/akshay</p>
+                        <p>github.com/akshay2001p</p>
                     </div>
                 </div>
             </div>
@@ -1339,7 +1339,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Akshay P. All rights reserved. Made with ❤️ and cutting-edge technology.</p>
+        <p>&copy; 2025 Akshay P. All rights reserved.</p>
     </footer>
 
     <script>
