--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Akshay P - Software Engineer | Full Stack Developer Portfolio">
     <meta property="og:description" content="Passionate software engineer specializing in full-stack development with React, Node.js, and modern web technologies. Explore my projects and get in touch.">
-    <meta property="og:image" content="https://yourwebsite.com/images/pro.jpeg">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:image" content="https://akshay-a3b5.onrender.com/images/pro.jpeg">
+    <meta property="og:url" content="https://akshay-a3b5.onrender.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Akshay P Portfolio">
     <meta property="og:locale" content="en_US">
@@ -26,11 +26,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Akshay P - Software Engineer | Full Stack Developer Portfolio">
     <meta name="twitter:description" content="Passionate software engineer specializing in full-stack development with React, Node.js, and modern web technologies.">
-    <meta name="twitter:image" content="https://yourwebsite.com/images/pro.jpeg">
+    <meta name="twitter:image" content="https://akshay-a3b5.onrender.com/images/pro.jpeg">
     <meta name="twitter:creator" content="@akshay_p_dev">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourwebsite.com">
+    <link rel="canonical" href="https://akshay-a3b5.onrender.com">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logo.png">
@@ -48,8 +48,8 @@
       "name": "Akshay P",
       "jobTitle": "Software Engineer",
       "description": "Passionate software engineer with 1 year of experience in full-stack development",
-      "url": "https://yourwebsite.com",
-      "image": "https://yourwebsite.com/images/pro.jpeg",
+      "url": "https://akshay-a3b5.onrender.com",
+      "image": "https://akshay-a3b5.onrender.com/images/pro.jpeg",
       "email": "akshay513p@gmail.com",
       "telephone": "+91-6235210270",
       "sameAs": [
