--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
         }
 
         .hero-image {
+            margin-top: 5rem;
             margin-bottom: 2rem;
             animation: slideInUp 1s ease-out 0.1s both;
             position: relative;
