--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Akshay P - Software Engineer | Full Stack Developer | React & Node.js Expert">
     <meta property="og:description" content="Experienced Software Engineer specializing in Full Stack Development. Expert in React, Node.js, TypeScript, Python. Explore my portfolio of innovative web applications and innovative projects.">
-    <meta property="og:image" content="https://akshay-a3b5.onrender.com/images/pro.jpeg">
+    <meta property="og:image" content="https://devakshay-portfolio.onrender.com/images/pro.jpeg">
     <meta property="og:image:alt" content="Akshay P - Professional Software Engineer Portrait">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://akshay-a3b5.onrender.com/">
+    <meta property="og:url" content="https://devakshay-portfolio.onrender.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Akshay P - Software Engineer Portfolio">
     <meta property="og:locale" content="en_US">
@@ -35,7 +35,7 @@
     <meta property="article:tag" content="Software Engineering">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://akshay-a3b5.onrender.com/">
+    <link rel="canonical" href="https://devakshay-portfolio.onrender.com/">
     
     <!-- Favicon and Touch Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="images/logo.png">
@@ -58,14 +58,14 @@
       "familyName": "P",
       "jobTitle": "Software Engineer",
       "description": "Experienced Software Engineer specializing in Full Stack Development with expertise in React, Node.js, TypeScript, Python, and modern web technologies. Creating innovative solutions and scalable web applications.",
-      "url": "https://akshay-a3b5.onrender.com",
+      "url": "https://devakshay-portfolio.onrender.com",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://akshay-a3b5.onrender.com"
+        "@id": "https://devakshay-portfolio.onrender.com"
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://akshay-a3b5.onrender.com/images/pro.jpeg",
+        "url": "https://devakshay-portfolio.onrender.com/images/pro.jpeg",
         "width": 400,
         "height": 400,
         "caption": "Akshay P - Professional Software Engineer"
