--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Akshay P - Software Engineer | Full Stack Developer | React & Node.js Expert">
     <meta property="og:description" content="Experienced Software Engineer specializing in Full Stack Development. Expert in React, Node.js, TypeScript, Python. Explore my portfolio of innovative web applications and innovative projects.">
-    <meta property="og:image" content="https://devakshay-portfolio.onrender.com/images/pro.jpeg">
+    <meta property="og:image" content="https://devakshay-portfolio.onrender.com/images/pro.png">
     <meta property="og:image:alt" content="Akshay P - Professional Software Engineer Portrait">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -65,7 +65,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://devakshay-portfolio.onrender.com/images/pro.jpeg",
+        "url": "https://devakshay-portfolio.onrender.com/images/pro.png",
         "width": 400,
         "height": 400,
         "caption": "Akshay P - Professional Software Engineer"
@@ -434,20 +434,20 @@
         }
 
         .hero-image {
-            margin-top: 5rem;
-            margin-bottom: 2rem;
+            margin-top: 3rem;
+            margin-bottom: 1.5rem;
             animation: slideInUp 1s ease-out 0.1s both;
             position: relative;
         }
 
         .profile-photo {
-            width: 280px;
-            height: 280px;
-            border-radius: 15px;
+            width: 380px;
+            height: 380px;
+            border-radius: 20px;
             object-fit: cover;
             box-shadow: 
-                0 0 20px rgba(0, 212, 255, 0.3),
-                0 8px 32px rgba(0, 0, 0, 0.3);
+                0 0 30px rgba(0, 212, 255, 0.4),
+                0 12px 45px rgba(0, 0, 0, 0.4);
             transition: all 0.3s ease;
             position: relative;
             display: block;
@@ -455,15 +455,15 @@
         }
 
         .profile-photo:hover {
-            transform: scale(1.05);
+            transform: scale(1.08);
             box-shadow: 
-                0 0 30px rgba(0, 212, 255, 0.5),
-                0 12px 40px rgba(0, 0, 0, 0.4);
+                0 0 40px rgba(0, 212, 255, 0.6),
+                0 15px 50px rgba(0, 0, 0, 0.5);
         }
 
         .hero h1 {
-            font-size: clamp(3rem, 6vw, 5rem);
-            margin-bottom: 1rem;
+            font-size: clamp(2.5rem, 5vw, 4rem);
+            margin-bottom: 0.8rem;
             background: linear-gradient(135deg, var(--primary-color), var(--purple), var(--accent-color));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -498,21 +498,21 @@
         }
 
         .hero .subtitle {
-            font-size: clamp(1.3rem, 3vw, 2rem);
+            font-size: clamp(1.1rem, 2.5vw, 1.6rem);
             color: var(--text-gray);
-            margin-bottom: 1rem;
+            margin-bottom: 0.8rem;
             animation: slideInUp 1s ease-out 0.2s both;
             position: relative;
             overflow: hidden;
         }
 
         .hero-description {
-            font-size: clamp(1rem, 2.5vw, 1.2rem);
+            font-size: clamp(0.9rem, 2vw, 1.1rem);
             color: var(--text-gray);
-            margin-bottom: 2rem;
+            margin-bottom: 1.8rem;
             animation: slideInUp 1s ease-out 0.4s both;
             line-height: 1.6;
-            max-width: 600px;
+            max-width: 550px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -537,10 +537,10 @@
         }
 
         .btn {
-            padding: 15px 40px;
+            padding: 12px 35px;
             border: none;
             border-radius: 50px;
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1169,6 +1169,41 @@
                 margin: 15px auto;
                 padding: 15px 25px;
             }
+
+            /* Responsive profile photo adjustments */
+            .profile-photo {
+                width: 280px;
+                height: 280px;
+            }
+
+            .hero h1 {
+                font-size: clamp(2rem, 8vw, 3rem);
+            }
+
+            .hero .subtitle {
+                font-size: clamp(1rem, 4vw, 1.4rem);
+            }
+
+            .hero-description {
+                font-size: clamp(0.85rem, 3vw, 1rem);
+                max-width: 90%;
+            }
+
+            .hero-image {
+                margin-top: 2rem;
+                margin-bottom: 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .profile-photo {
+                width: 220px;
+                height: 220px;
+            }
+
+            .hero-image {
+                margin-top: 1.5rem;
+            }
         }
     </style>
 </head>
@@ -1218,7 +1253,7 @@
     <section id="home" class="hero" itemscope itemtype="https://schema.org/Person">
         <div class="hero-content">
             <header class="hero-image">
-                <img src="images/pro.jpeg" alt="Akshay P - Professional Software Engineer and Full Stack Developer specializing in React, Node.js, and modern web technologies" class="profile-photo" loading="eager" itemprop="image">
+                <img src="images/pro.png" alt="Akshay P - Professional Software Engineer and Full Stack Developer specializing in React, Node.js, and modern web technologies" class="profile-photo" loading="eager" itemprop="image">
             </header>
             <h1 itemprop="name">Akshay P</h1>
             <p class="subtitle" itemprop="jobTitle">Software Engineer & Full Stack Developer</p>
